force-app/main/default/objects/Warship__c/Warship__c.object-meta.xml
<CustomObject>
    <label>Warship</label>
    <nameField>
        <label>Warship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>