force-app/main/default/objects/Warship__c/validationRules/Date_limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_limit</fullName>
    <active>true</active>
    <errorConditionFormula>AND( End_Date__c  &lt;=  Today())</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>date after today</errorMessage>
</ValidationRule>