force-app/main/default/objects/Warship__c/validationRules/Milesto_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Milesto_Limit</fullName>
    <active>false</active>
    <errorConditionFormula>AND( Milestone__c   &lt;  0)</errorConditionFormula>
    <errorDisplayField>Milestone__c</errorDisplayField>
    <errorMessage>Milestone maior que zero</errorMessage>
</ValidationRule>